api/auth/login work

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,11 @@
   <form action="" id="registerForm">
     Username<input type="text" id="usernameInput">
     Password<input type="text" id="passwordInput">
+    <select name="role" id="roleInput" >
+      <option value=""  >---Select your role---</option>
+      <option value="instructor">Instructor</option>
+      <option value="client">Client</option>
+  </select>
     <div>
       <button id="registerBtn">register</button>
       <button id="loginBtn">login</button>
